# default-templates

./: README.md
compose/DefaultTemplate/: settings.gradle.kts
compose/DefaultTemplate/app/: build.gradle.kts
compose/DefaultTemplate/gradle/wrapper/: gradle-wrapper.properties
gnome/DefaultTemplate/: README.md  meson.build  org.example.DefaultTemplate.json
gnome/DefaultTemplate/data/: meson.build  org.example.DefaultTemplate.desktop.in  org.example.DefaultTemplate.gschema.xml  org.example.DefaultTemplate.metainfo.xml.in
gnome/DefaultTemplate/po/: POTFILES  meson.build
gnome/DefaultTemplate/src/: application.vala  defaulttemplate.gresource.xml  main.vala  meson.build  window.ui  window.vala
kirigami/DefaultTemplate/: CMakeLists.txt  DefaultTemplate.kdev4  org.kde.defaulttemplate.desktop  org.kde.defaulttemplate.json  org.kde.defaulttemplate.metainfo.xml
kirigami/DefaultTemplate/android/: AndroidManifest.xml
kirigami/DefaultTemplate/src/: CMakeLists.txt  defaulttemplateconfig.kcfgc  main.cpp
swiftui/DefaultTemplate/DefaultTemplate/: ContentView.swift  DefaultTemplateApp.swift  Item.swift
swiftui/DefaultTemplate/DefaultTemplate.xcodeproj/: project.pbxproj
swiftui/DefaultTemplate/DefaultTemplateTests/: DefaultTemplateTests.swift
swiftui/DefaultTemplate/DefaultTemplateUITests/: DefaultTemplateUITests.swift  DefaultTemplateUITestsLaunchTests.swift
uwp/DefaultTemplate/: DefaultTemplate.sln
uwp/DefaultTemplate/DefaultTemplate/: App.xaml  App.xaml.cs  DefaultTemplate.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
(+13 files in other folders)
